# AndroidNDKExamples

./: README.md
NDKExample1_PassingData/app/: build.gradle
NDKExample1_PassingData/app/src/androidTest/java/mistwork/com/ndkexample1_passingdata/: ExampleInstrumentedTest.java
NDKExample1_PassingData/app/src/main/: AndroidManifest.xml
NDKExample1_PassingData/app/src/main/cpp/: native-lib.cpp
NDKExample1_PassingData/app/src/main/java/mistwork/com/ndkexample1_passingdata/: MainActivity.java
NDKExample1_PassingData/app/src/main/res/layout/: activity_main.xml
NDKExample1_PassingData/app/src/main/res/values/: strings.xml
NDKExample1_PassingData/app/src/test/java/mistwork/com/ndkexample1_passingdata/: ExampleUnitTest.java
NDKExample2_CppClass/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
NDKExample2_CppClass/app/src/androidTest/java/tests/mistwork/ndkexample2_cppclass/: ExampleInstrumentedTest.java
NDKExample2_CppClass/app/src/main/: AndroidManifest.xml
NDKExample2_CppClass/app/src/main/cpp/: ShaderProgram.cpp  ShaderProgram.h  native-lib.cpp
NDKExample2_CppClass/app/src/main/java/tests/mistwork/ndkexample2_cppclass/: ES20Renderer.java  ES20SurfaceView.java  MainActivity.java
NDKExample2_CppClass/app/src/main/res/layout/: activity_main.xml
NDKExample2_CppClass/app/src/main/res/values/: strings.xml
NDKExample2_CppClass/app/src/test/java/tests/mistwork/ndkexample2_cppclass/: ExampleUnitTest.java
